--- a/katie_pietrucha_snowshoe_report.Rmd
+++ b/katie_pietrucha_snowshoe_report.Rmd
@@ -40,6 +40,7 @@ Count the total number of juvenile hare trappings during each year of the study,
 # Wrangle to find total number of hare trappings per year
 
 hare_counts <- bonanza_hares %>% 
+  filter(age == "j") %>%
   mutate(date_new = mdy(date)) %>%
   mutate(year = year(date_new)) %>%
   group_by(year) %>%
@@ -61,8 +62,8 @@ hare_count_stats <- hare_counts %>%
 hare_counts %>%
   ggplot(aes(x = year, y = count)) +
   geom_col(fill = "skyblue1") +
-  scale_x_continuous(breaks = 1998:2012) +
-  labs(x = "\nYear", y = "Number of hare trappings\n") +
+  scale_x_continuous(breaks = 1999:2012) +
+  labs(x = "\nYear", y = "Number of juvenile hare trappings\n") +
   theme_bw()
 ```
 
@@ -78,6 +79,45 @@ These are absolute counts, but this count is also impacted by effort (e.g. the n
 ### Visualize juvenile hare weights
 
 Create a finalized data visualization (or visualizations) in which you compare **juvenile hare weights by sex and site (grid)** (ignore other variables). You should include groups where these variables are not recorded (`NA`). Include finalized figure captions below your visualization(s).
+
+```{r}
+# Wrangle juvenile hare weights by sex and site
+
+hare_weights <- bonanza_hares %>%
+  filter(age == "j") %>%
+  group_by(sex, weight, grid) %>%
+  summarize()
+```
+
+```{r}
+# Visualize juvenile hare weights
+hare_weights %>%
+    ggplot(aes(x = sex, y = weight, fill = sex)) +
+  geom_boxplot(alpha = 0.7) +
+  facet_wrap(~ grid) +
+  stat_summary(fun.y=mean, geom="point", shape=20, size=5, color="blue", fill="blue") +
+  theme_bw()
+```
+
+```{r}
+# Summary statistics for weights
+
+weight_stats <- hare_weights %>%
+  group_by(grid, sex) %>%
+  summarize(mean = mean(weight, na.rm = TRUE),
+            median = median(weight, na.rm = TRUE),
+            sd = sd(weight, na.rm = TRUE))
+```
+
+```{r}
+# Visualize summary statistics
+
+weight_stats %>%
+  ggplot(aes(x = grid, y = mean, fill = grid)) +
+  geom_col() +
+  facet_wrap(~ sex)
+```
+
 
 Then, in 2 - 3 sentences below your visualization(s) describe in text the main takeaways that you would want the audience to understand from your figures.
 
