--- a/katie_pietrucha_snowshoe_report.Rmd
+++ b/katie_pietrucha_snowshoe_report.Rmd
@@ -1,8 +1,8 @@
 ---
-title: 'Assignment 4, Task 3: Mini exploratory report on juvenile snowshoe hares in
+title: ' Mini exploratory report on juvenile snowshoe hares in
   Bonanza Creek LTER'
 author: "Katie Pietrucha"
-date: "11/7/2021"
+date: "11/10/2021"
 output: html_document
 ---
 
@@ -22,18 +22,17 @@ library(lubridate)
 bonanza_hares <- read_csv(here("data", "bonanza_hares.csv"))
 ```
 
-## Introduction
+## 1. Introduction
 
-A 4 - 5 sentence "mini-introduction" to what this study is exploring, including basic background information about the subject, site and study (with citations as needed), and a brief overview of what is included in the exploratory report.
+This report provides an exploratory overview of differences in counts and sizes of juvenile showshoe hares from 1998 - 2012 (Kielland et al. 2017). The hares represented were observed at the Bonanza Creek Experimental Forest near Fairbanks, Alaska, which is part of the US Long Term Ecological Research Network. Specifically, hare counts are compared annually across the length of the study, weights are compared across sex and sampling site, and the relationship between weight and hind foot length is explored.
 
-## Data and analyses
+## 2. Data and analyses
 
-Bonanza Creek LTER is part of the US Long Term Ecological Research Network. See more information about the site here. In this “mini exploratory report,” you will explore the counts and sizes of juvenile snowshoe hares recorded from 1998 - 2012.
-A 3 - 4 sentence section in which you briefly describe the data, including citation & credit as needed, and provide an overview of the main analysis, statistical methods and tools used.
+Snowshoe hare physical data was collected and made available by Dr. Knut Kielland and colleagues at the Bonanza Creek Long-Term Ecological Research (LTER) network site, specifically the Bonanza Creek Experimental Forest, 20 km southwest of Fairbanks, Alaska (Kielland et al. 2017). The data contain observations for snowshoe hares trapped from 3 sampling sites between 1998 and 2012. In exploratory data visualizations, juvenile hare trappings are compared annually across the years included in the study and juvenile hare weights are compared across sex and sampling site. The difference in weights between male and female hares are evaluated using a two-sample t-test (using a significance level (α) of 0.05 throughout), and the differences between groups are described by Cohen's d effect size. The relationship between weight and hind foot length is explored by simple linear regression. All analyses are in R version 4.1.1 using RStudio version 1.4.1717.
 
-## Juvenile hare initial investigation 
+## 3. Preliminary results from juvenile hare initial investigation 
 
-### Annual juvenile hare trap counts 
+### A. Annual juvenile hare trap counts 
 
 ```{r, include = FALSE}
 
@@ -69,15 +68,15 @@ hare_counts %>%
   theme_bw()
 ```
 
-**Figure 1:** Total number of juvenile hare trappings by year (1999-2012).
+**Figure 1:** Total number of juvenile hare trappings by year (1999-2012). Data: Kielland et al. 2017.
 
-The data shows that total juvenile hare trappings varied considerably by year, with the most trapped in 1999, and a general decrease in hares trapped over the course of the study. In some year, no juvenile hares were trapped -- 1998 (not shown), 2002, and 2009. The minimum juvenile hare count (> 1) was `r hare_count_stats[3]` and the maximum juvenile hare count was `r hare_count_stats[2]`. The mean number of juvenile hares trapped annually is `r hare_count_stats[1]`, and the median is `r hare_count_stats[4]`. To standardize the juvenile hare population in future analyses, I would recommend calculating the number of juveniles hares trapped per number of traps placed per year. This would eliminate the effect of effort on the counts and make the count value intensive, not relying on the amount of each year's effort.
+The number of annual juvenile hare trappings was compared from 1999-2012. Total juvenile hare trappings varied considerably by year, with the most trapped in 1999, and a general decrease in hares trapped over the course of the study. In some years, no juvenile hares were trapped -- 1998 (not shown), 2002, and 2009. The minimum juvenile hare count (> 0) was `r hare_count_stats[3]` and the maximum juvenile hare count was `r hare_count_stats[2]`. The mean number of juvenile hares trapped annually is `r hare_count_stats[1]`, and the median is `r hare_count_stats[4]`. To standardize the juvenile hare population in future analyses, I would recommend calculating the number of juveniles hares trapped per number of traps placed per year. This would eliminate the effect of effort on the counts and make the count value intensive, not relying on the amount of each year's effort.
 
-### Visualize juvenile hare weights by sex and grid
+### B. Difference in hare weights by sex and grid (sampling site)
 
 ```{r, include = FALSE}
 
-# Wrangle juvenile hare weights and add new dolumn wiuth full grid names
+# Wrangle juvenile hare weights and add new column with full grid names
 juve_hares <- bonanza_hares %>%
   filter(age == "j") %>%
     mutate(grid_full = case_when(
@@ -89,7 +88,7 @@ juve_hares <- bonanza_hares %>%
 
 ```{r, include = TRUE}
 
-# Visualize juvenile hare weights
+# Visualize juvenile hare weights across sex and grid
 juve_hares %>%
   ggplot(aes(x = sex, y = weight)) +
   geom_jitter(aes(color = sex)) + 
@@ -104,11 +103,11 @@ juve_hares %>%
   scale_x_discrete(labels = c("Female","Male","Unknown"))
 ```
 
-**Figure 2:** Juvenile hare weights (g) by sex and by site. Each point is a single observation. The overlaying box plot shows the median (line), interquartile range (box), minimum and maximum (whiskers), and outliers (points beyond whiskers). The larger black dots indicate the mean for each sex category at each site. 
+**Figure 2:** Juvenile hare weights (g) by sex and sampling site. Each point is a single observation. Box endpoints indicate the 25th and 75th percentile values; the black line and black point within the box indicate the median and mean value for each sex, respectively. Hares recorded with a sex of 'NA' are represented by the 'Unknown' category. Data: Gorman et al. (2014).
 
-The most juvenile hares were trapped at the Bonanza Riparian site, which may indicated their preferred habitat. The mean and median weights do vary by sex, although not dramatically, and can be compared by looking across the black points and lines. Males and female weights appear to have similar means in the Bonanza Mature and Bonanza Riparian zones, while in the Mature Lowland Black Spruce site, the means appear to be larger for each sex. 
+The most juvenile hares were trapped at the Bonanza Riparian site, which may indicate their preferred habitat. The mean and median weights do vary by sex and can be compared by looking across the black points and lines at each site. Males and female weights appear to have similar means in the Bonanza Mature and Bonanza Riparian zones, while in the Mature Lowland Black Spruce site, the means appear to be larger for each sex. The mechanisms behind this difference should be explored in a future study. 
 
-### Juvenile weight comparison by sex
+### C. Difference in juvenile weight between male and female snowshoe hares
 
 ```{r, include = FALSE}
 
@@ -121,7 +120,7 @@ ggplot(data = juve_hares, aes(sample = weight)) +
   geom_qq() +
   facet_wrap(~ sex)
 
-# Data appears normally distributed
+# Data appears normally distributed, with the exception of perhaps the male juvenile weight distribution. However, the Central Limit Theorem notes that with a large sample size, the distribution of samples approximates a normal distribution regardless of the underlying population distribution.
 ```
 
 ```{r, include = FALSE}
@@ -139,26 +138,27 @@ male_sample <- juve_hares %>%
 ```
 
 ```{r, include = FALSE}
-# Perform t-test
 
+# Perform t-test
 weight_t <- t.test(male_sample, female_sample)
 
+# Create tidy data frame of outputs
 weight_t_tidy <- tidy(weight_t)
 
 weight_t_tidy
 ```
 
 ```{r, include = FALSE}
-# Cohen's d
 
+# Calculate Cohen's d
 weight_cohen <- cohen.d(male_sample, female_sample)
 
 weight_cohen
 ```
 
 ```{r, include = FALSE}
-# Summary statistics for weights
 
+# Summary statistics for weights by sex
 weight_stats <- juve_hares %>%
   mutate(sex = case_when(
     sex == "f" ~ "Female",
@@ -173,17 +173,18 @@ weight_stats <- juve_hares %>%
 ```{r, include = TRUE}
 
 # Create table
-  kbl(weight_stats, caption = "<center><strong>Table 1: Means comparison of male and female juvenile snowshoe hare weights. </strong>: The mean male hare weight is larger than the female mean weight. The male mean weight also has a larger standard deviation but a smaller sample size.</center>", col.names = c("Sex", "Mean (g)", "Standard Deviation (g)", "Sample Size")) %>%
+  kbl(weight_stats, caption = "<center><strong>Table 1: Means comparison of male and female juvenile snowshoe hare weights</strong>: Male juvenile hares have a larger mean weight than female juveniles. The male mean weight also has a larger standard deviation but less males were sampled.</center>", col.names = c("Sex", "Mean (g)", "Standard Deviation (g)", "Sample Size")) %>%
   kable_paper() %>%
   kable_styling(bootstrap_options = c("striped", "hover")) 
 ```
-The male mean weight (`r weight_stats$mean[2]`) is `r weight_stats$mean[2] - weight_stats$mean[1]` larger than the female mean weight (`r weight_stats$mean[1]`). The effect size is small (`r round(weight_cohen$estimate, 2)`) and the differene significant (two-sample t-test: t = `r round(weight_t_tidy[4], 2)`, p < `r round(weight_t_tidy[5], 3)`).
 
-### Relationship between juvenile weight & hind foot length
+The male mean weight (`r weight_stats$mean[2]`) is `r weight_stats$mean[2] - weight_stats$mean[1]` larger than the female mean weight (`r weight_stats$mean[1]`). The effect size is small (`r round(weight_cohen$estimate, 2)`) and the difference significant (two-sample t-test: t = `r round(weight_t_tidy[4], 2)`, p < `r round(weight_t_tidy[5], 3)`).
+
+### D. Relationship between juvenile weight & hind foot length
 
 ```{r, include = TRUE}
 
-# Compare juvenile hare hind foot length and weight
+# Compare juvenile hare hind foot length and weight with a simple linear regression
 juve_hares %>%
   ggplot(aes(x = weight, y = hindft)) +
   geom_point(color = "cadetblue3") +
@@ -193,19 +194,16 @@ juve_hares %>%
   theme_bw() +
   geom_smooth(method = lm)
 ```
-
-**Figure 3:** Juvenile hind foot length (mm) v. hare weight (g) correlation. There is a positive correlation between hind foot length and juvenile hare weight. The plotted line is a linear regression model.
-
 ```{r, include = FALSE}
 
 # Linear regression
 hare_lm <- lm(weight ~ hindft, data = juve_hares)
 
+# Create tidy data frame of outputs
 hare_lm_tidy <- tidy(hare_lm)
 
 hare_lm_tidy
 ```
-
 ```{r, include = FALSE}
 
 # Glance to see R^2
@@ -219,10 +217,13 @@ hare_lm_out
 # Pearson's r
 hares_cor <- cor.test(juve_hares$weight, juve_hares$hindft)
 
+# Create tidy data frame of outputs
 hares_cor_tidy <- tidy(hares_cor)
 
 hares_cor_tidy
 ```
+
+**Figure 3:** Relationship between juvenile hind foot length (mm) and hare weight (g). Points indicate individual hare measurements of all sexes. There is a medium positive correlation between hind foot length and juvenile hare weight. The plotted line is a linear regression model (summary: β1 = `r round(hare_lm_tidy$estimate[2], 2)` mm/g, p < `r hare_lm_out[5]`, R^2 = `r round(hare_lm_out[1],3)`, Pearson’s r = `r round(hares_cor_tidy[1], 2)`). Data: Kielland et al. 2017.
 
 ```{r, include = FALSE}
 
@@ -230,13 +231,24 @@ hares_cor_tidy
 plot(hare_lm)
 ```
 
-There is a medium positive correlation (Pearson's r = `r round(hares_cor_tidy[1], 2)`) between juvenile hare weight and hind foot length. R^2 = `r round(hare_lm_out[1],3)`, which indicates that 29.9% of the variance in juvenile hare hind foot length is explained by the model for juvenile hare weight. The diagnostic plots of the model do pose a concern. Based on the residual variances plot, the assumption of homoscedasticity is violated. The q-q-plot also poses converns about the normality of the residuals distribution because it appears skewed. Additionally, the Cook's distance plot shows some outliers that may be influencing the model. Because of the low R^2 value and the abnormal diagnostic plots, I would not say that this linear model describes the relationship very well.
+There is a medium positive correlation (Pearson's r = `r round(hares_cor_tidy[1], 2)`) between juvenile hare weight and hind foot length. The linear model summary is β1 = `r round(hare_lm_tidy$estimate[2], 2)` mm/g, p < `r hare_lm_out[5]`, R^2 = `r round(hare_lm_out[1],3)`. On average, we would expect that for every 1 gram increase in body weight, there would be a `r round(hare_lm_tidy$estimate[2], 2)` mm increase in hind foot length. The R^2 value (`r round(hare_lm_out[1],3)`) indicates that 29.9% of the variance in juvenile hare hind foot length is explained by the model for juvenile hare weight. 
 
-In 2 - 3 sentences below your figure, describe the outcome of your linear regression exploration (e.g. slope interpretation, R2 value, and Pearson's r correlation) and touch briefly on which assumption(s) of linear regression may be a concern, and additional thoughts you have about how well (or not well…) the linear model describes the relationship. What worries you? 
+The diagnostic plots of the model do pose a concern. Based on the residual variances plot, the assumption of homoscedasticity is violated, as the residual variance appears to increase over the range of fitted values. The q-q-plot also poses concerns about the normality of the residuals distribution because it appears skewed. Additionally, the Cook's distance plot shows some outliers that may be influencing the model. Because of the low R^2 value and the abnormal diagnostic plots, this model does not appear to well describe the relationship between hind foot length and weight.
 
 ## Summary
 
-Include a very short summary describing your main findings from your juvenile hares exploration (bullet points are fine)
+Exploratory data analysis reveals the following initial findings:
+
+* The number of juvenile hares trapped varied widely across the years of the study.
+* Male juvenile snowshoe hares tend to weigh more than female juvenile showshoe hares (the difference is significant, the effect size is small).
+* Hind foot length appears linearly related with body weight across all sexes: the relationship is significant with a slope of `r round(hare_lm_tidy$estimate[2], 2)` mm/g, however, diagnostic plot outcomes pose some questions about the normality of the residuals distributions. 
+
+Next steps:
+
+* Compare hind foot lengths statistically (one-way ANOVA), including hare sex as a covariate.
+* Multiple linear regression to understand the relationship between sex, site, flipper length and body mass.
+* Statistically comparing the difference in mean weights from the all sites sampled (one-way ANOVA), and specifically compare the mean weights from the Mature Lowland Black Spruce site to the mean weights of the other sites combined (two-sample t-test).
+* Explore other ways to model the relationship between hind foot length and body weight, since the assumption of homoscedasticity for a linear model appears to be violated.
 
 ## Citations
 
